[package]
name = "r"
version = "0.0.9"
authors = ["Yu Jing <yu@argcv.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "a set of utils for machine learning"

# These URLs point to more information about the repository
documentation = "https://github.com/yuikns/r-rs/blob/master/README.md"
homepage = "https://argcv.com/articles/4171.c"
repository = "https://github.com/yuikns/r-rs.git"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = []

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

# If a project is using a nonstandard license, then this key may be specified in
# lieu of the above key and must point to a file relative to this manifest
# (similar to the readme key)
#license-file = "LICENSE"

[lib]
name = "r"
path = "src/lib.rs"

[dependencies]
rand = "0.3.13"

#[dev-dependencies]
#log = "0.3.5"


[[test]]
name = "tests"


